OpenSubdiv misbehavior and crash with vertex-parented children and drivers. #46589

Closed
opened 2015-10-24 19:20:46 +02:00 by Alexander Gavrilov · 6 comments

System Information

Fedora 21, GeForce GT 640

Blender Version

Broken: 2.76

Short description of error

If an object has vertex-parented children, OpenSubdiv can still be enabled but the objects shift around in weird ways. Also, if Use OpenSubdiv is toggled via driver, it will intermittently crash.

Exact steps for others to reproduce the error

Load this file: test-subdiv-driver.blend

The selected bone has an 'opensubdiv' property, which controls the checkbox on the middle cube subdiv modifier via driver.

  • Toggling it from 0 to 1 makes the small cubes move around.
  • Toggling it enough times (most conveniently done by dragging the field and shaking the mouse left-right) crashes blender. Strangely, it doesn't happen if toggling the checkbox directly.

P.S. Just before submitting I found that the crash still happens eventually even if I delete the child objects, so these may be unrelated problems.

**System Information** Fedora 21, GeForce GT 640 **Blender Version** Broken: 2.76 **Short description of error** If an object has vertex-parented children, OpenSubdiv can still be enabled but the objects shift around in weird ways. Also, if Use OpenSubdiv is toggled via driver, it will intermittently crash. **Exact steps for others to reproduce the error** Load this file: [test-subdiv-driver.blend](https://archive.blender.org/developer/F247167/test-subdiv-driver.blend) The selected bone has an 'opensubdiv' property, which controls the checkbox on the middle cube subdiv modifier via driver. * Toggling it from 0 to 1 makes the small cubes move around. * Toggling it enough times (most conveniently done by dragging the field and shaking the mouse left-right) crashes blender. Strangely, it doesn't happen if toggling the checkbox directly. P.S. Just before submitting I found that the crash still happens eventually even if I delete the child objects, so these may be unrelated problems.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @angavrilov

Added subscriber: @angavrilov

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2015-10-27 16:38:41 +01:00

The issue with vertex parent was fixed in 7e7527d. The issue with driver happens because of drivers are evaluated from the threads, making it likely to crash with OpenSubdiv due to OpenGL access from several threads. This still needs work.

The issue with vertex parent was fixed in 7e7527d. The issue with driver happens because of drivers are evaluated from the threads, making it likely to crash with OpenSubdiv due to OpenGL access from several threads. This still needs work.

This issue was referenced by a5f4f1e2ce

This issue was referenced by a5f4f1e2cea831415c045be4927320dc060798c9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46589
No description provided.